syntax = "proto3";

package live;

option go_package = "uooobarry/yuuna-danmu/pkg/server/grpc/pb";

service LiveService {
  rpc Subscribe(Empty) returns (stream LiveEvent);
}

message Empty {}

message LiveEvent {
  oneof payload {
    DanmuMsg danmu = 1;
    PopularityMsg popularity = 2;
    GiftData gift = 3;
    string sys_msg = 4;
    string error = 5;
    SuperChatMsg super_chat = 6;
  }
}

message DanmuMsg {
  string content = 1;
  int64 user_id = 2;
  string nickname = 3;
  string medal_name = 4;
  int32 medal_level = 5;
}

message PopularityMsg {
  int32 popularity = 1;
}

message GiftData {
  int64 uid = 1;
  string uname = 2;
  string face = 3;
  string gift_name = 4;
  int32 gift_num = 5;
  double price = 6;
  int32 combo_total_coin = 7;
  int32 total_coin = 8;
  string coin_type = 9;
  string action = 10;
  GiftInfo gift_info = 11;
  MedalInfo medal_info = 12;
  ComboSend combo_send = 13;
}

message GiftInfo {
  string img_basic = 1;
  string gif = 2;
}

message MedalInfo {
  string medal_name = 1;
  int32 medal_level = 2;
}

message ComboSend {
  string combo_id = 1;
  int32 combo_num = 2;
}

message UserInfo {
  string face = 1;
  string uname = 2;
}

message SuperChatMsg {
  MedalInfo medal_info = 1;
  string message = 2;
  string font_color = 3;
  int32 price = 4;
  UserInfo user_info = 5;
  int64 start_time = 6;
  int64 end_time = 7;
}
